<resources>
    <string name="app_name">FiTX</string>
    <string name="title_activity_menu_meta_calc">Sign in</string>
    <string name="facebook_app_id">199490150600145</string>
    <string name="fb_login_protocol_scheme">fb199490150600145</string>
    <string name="title_activity_user_login">UserLoginActivity</string>
    <string name="fitx">FiTX Fitness Assistant</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_main">FiTX/Main</string>
    <string name="button_diet_name">Dieta</string>
    <string name="button_training_name">Trening</string>
    <string name="button_settings_name">Ustawienia</string>
    <string name="button_stats_name">Statystyki</string>
    <string name="grams">Ilość gramów</string>
    <string name="options">Opcje</string>
    <string name="body_chest">Klatka \npiersiowa</string>
    <string name="body_abs">Brzuch</string>
    <string name="body_quads">Czworogłowe</string>
    <string name="body_shoulders">Barki</string>
    <string name="body_biceps">Bicepsy</string>
    <string name="body_forearms">Przedramiona</string>
    <string name="body_trapss">Czworoboczny</string>
    <string name="body_lats">Najszerszy \ngrzbietu</string>
    <string name="body_triceps">Triceps</string>
    <string name="body_glutes">Pośladki</string>
    <string name="body_hamstrings">Dwugłowy</string>
    <string name="body_calves">Łydki</string>
    <string name="reps_short">Powt.</string>
    <string name="kg_short">kg</string>
    <string name="t_short">t</string>
    <string name="rotate_body">Obróć 180°</string>
    <string name="rotate">Obrót</string>
    <string name="body_front">Ciało przód</string>
    <string name="body_back">Ciało tył</string>
    <string name="exercise_name">Nazwa ćwiczenia</string>
    <string name="series">Ilość serii</string>
    <string name="weight">Ciężar</string>
    <string name="series_example">Przykład: 14.12.10.8.8</string>
    <string name="weight_example">Przykład: 50.60.65.70.70</string>
    <string name="notes">Notes:</string>
    <string name="no_empty">Nie może być puste</string>
    <string name="done">Ćwiczono</string>
    <string name="not_done">Nie ćwiczono</string>
    <string name="s15">15</string>
    <string name="s30">30</string>
    <string name="s45">45</string>
    <string name="s60">60</string>
    <string name="s75">75</string>
    <string name="s90">90</string>
    <string name="s105">105</string>
    <string name="s120">120</string>
    <string name="s135">135</string>
    <string name="s150">150</string>
    <string name="start">start</string>
    <string name="reset">reset</string>
    <string name="pause">pause</string>
    <string name="training_details">Opis ćwiczenia:</string>
    <string name="show">Pokaż</string>
    <string name="button_register">Rejestracja</string>
    <string name="loading">Ładowanie</string>
    <string name="proteins">Białka</string>
    <string name="fats">Tłuszcze</string>
    <string name="carbs">Węglowodany</string>
    <string name="fiber">Błonnik</string>
    <string name="sugars">Cukry proste</string>
    <string name="calories">Kalorie</string>
    <string name="saturated_fats">Tłuszcze nasycone</string>
    <string name="un_saturated_fats">Tłuszcze nienasycone</string>
    <string name="error">Wystąpił problem</string>
    <string name="proteins_short_colon">B:</string>
    <string name="fats_short_colon">T:</string>
    <string name="carbs_short_colon">W:</string>
    <string name="kcal_short_colon">KCAL:</string>
    <string name="grams_short">g</string>
    <string name="kcal_short">kcal</string>
    <string name="text_view_rest_time">Odpoczynek</string>
    <string name="username_error">Username Error</string>
    <string name="search">Szukaj</string>
    <string name="zero">0</string>
    <string name="product_name">Nazwa produktu</string>
    <string name="accept">Akceptuj</string>
    <string-array name="product_value_choice">
        <item>Ilość gramów</item>
        <item>Ilość sztuk</item>
    </string-array>
    <string name="title_activity_diet_product_show">DietProductShowActivity</string>
    <string name="action_settings">Settings</string>
    <string name="delete">Usuń</string>
    <string name="value_per_100_g">kcal / 100g</string>
    <string name="time_stamp">timeStamp</string>
    <string name="add">Dodaj</string>
    <string name="type_your_ideas">Napisz co myślisz</string>
    <string name="image">Obrazek prezentujący początkową fazę ruchu</string>
    <string name="image1">Obrazek prezentujący końcową fazę ruchu</string>
    <string name="lifted">Podniesiono</string>
    <string name="time_example">01:30</string>
    <string name="X">X</string>
    <string name="set">Seria</string>
    <string name="reps_long">Powtórzenia</string>
    <string name="description">Opis</string>
    <string name="limit">Limit</string>
    <string name="calories_main">kalorii</string>
    <string name="gym">Siłownia</string>
    <string name="time_on_gym">Czas na siłowni</string>
    <string name="lifted_1">podniesiono</string>
    <string name="minutes_on_gym">Minuty na siłowni</string>
    <string name="cardio">Cardio</string>
    <string name="burned">spalono</string>
    <string name="minutes_on_cardio">Minuty</string>
    <string name="row_diet">Diet</string>
    <string name="training_gym">gym</string>
    <string name="training_cardio">cardio</string>
    <string name="you_will_burn">Spalisz kalorii:</string>
    <string name="time_cardio_example">10:00</string>
    <string name="save">Zapisz</string>
    <string name="product_deleted">Produkt usunięto</string>
    <string name="product_inserted">Produkt dodano</string>
    <string name="product_updated">Produkt zaktualizowano</string>
    <string name="training_updated">Trening zaktualizowano</string>
    <string name="training_inserted">Trening dodano</string>
    <string name="training_deleted">Trening usunięto</string>
    <string name="pref_header_general">General</string>
    <string name="pref_title_social_recommendations">Enable social recommendations</string>
    <string name="pref_description_social_recommendations">Recommendations for people to contact
        based on your message history
    </string>
    <string name="pref_title_display_name">Display name</string>
    <string name="pref_default_display_name">John Smith</string>
    <string name="pref_title_add_friends_to_messages">Add friends to messages</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When possible</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>
    <string name="pref_header_data_sync">Data &amp; sync</string>
    <string name="pref_title_sync_frequency">Sync frequency</string>
    <string-array name="pref_sync_frequency_titles">
        <item>15 minutes</item>
        <item>30 minutes</item>
        <item>1 hour</item>
        <item>3 hours</item>
        <item>6 hours</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_sync_frequency_values">
        <item>15</item>
        <item>30</item>
        <item>60</item>
        <item>180</item>
        <item>360</item>
        <item>-1</item>
    </string-array>
    <string-array name="list_preference_entries">
        <item>Entry 1</item>
        <item>Entry 2</item>
        <item>Entry 3</item>
    </string-array>
    <string-array name="list_preference_entry_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
    </string-array>
    <string-array name="multi_select_list_preference_default_value" />
    <string name="pref_title_system_sync_settings">System sync settings</string>
    <string name="pref_header_notifications">Notifications</string>
    <string name="pref_title_new_message_notifications">New message notifications</string>
    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>
    <string name="pref_title_vibrate">Vibrate</string>
    <string name="reps_long1">powtórzeń</string>
    <string name="kg_long">kilogramy</string>
    <string name="reps_short1">powt.</string>
    <string name="add_set">Dodaj serię</string>
    <string name="timer">Timer</string>
    <string name="cancel">Anulowano</string>
    <string name="welcome_new_user">Witamy nowego użytkownika</string>
    <string name="welcome_again">Witaj ponownie</string>
    <string name="connection_error">Błąd połączenia</string>
    <string name="password">Hasło</string>
    <string name="username">Nazwa użytkownika</string>
    <string name="added">Dodano</string>
    <string name="data_example">2018.09.10</string>
    <string name="somatotype">Somatotyp</string>
    <string name="your_body_type">Twój typ sylwetki</string>
    <string name="string_example">Przykład</string>
    <string name="body_mass">Masa ciała</string>
    <string name="body_mass_descripition_long">Masa ciała wyrażana w kilogramach na planecie Ziemia.</string>
    <string name="body_mass_descripition_short">Masa ciała wyrażona w kilogramach</string>
    <string name="body_height">Wzrost</string>
    <string name="body_height_description_short">Wzrost wyrażony w cm</string>
    <string name="body_height_description_long">Parametr określający wysokość człowieka mierzoną od czubka głowy do podeszwy stopy w pozycji wyprostowanej. Rano i wieczorem wzrost może się różnić o 2–3 cm.</string>
    <string name="calories_automatic">Auto kalorie</string>
    <string name="calories_automatic_long">Program za Ciebie obliczy ilość kalorii potrzebnych do utrzymania wagi</string>
    <string name="calories_manual">Manualne kalorie</string>
    <string name="calories_manual_long">Ręczne ustawianie kalorii</string>
    <string name="calories_consumed">Spożyte kalorie</string>
    <string name="calories_limit">Limit kalorii</string>
    <string name="updated">Zaktualizowano</string>
    <string name="settings_user_goal">Twój cel</string>
    <string name="settings_user_goal_description_short">Obierz cel a program przeliczy za Ciebie automatycznie kalorie</string>
    <string name="quit_message_title">Czy chcesz się wylogować?</string>
    <string name="yes">Tak</string>
    <string name="no">Nie</string>
    <string name="quit_message_long">Bez obaw, po ponownym zalogowaniu będziesz dalej w posiadaniu swoich wyników.</string>
    <string name="no_data">Brak danych</string>
    <string name="diet_title">Dieta</string>
    <string name="training_title">Trening</string>
    <string name="diet_ratio">Stosunek makroskładników</string>
    <string name="diet_ratio_description_short">Stosunek Białko:Tłuszcze:Węgle</string>
    <string name="diet_ratio_enter_proper_data">Suma wszystkich makroskładników musi wynosić 100</string>
    <string name="userRealName">Imię</string>
    <string name="email_address">Adres email</string>
    <string name="password_retype">Powtórz hasło</string>
    <string name="sex">Płeć</string>
    <string name="man">Mężczyzna</string>
    <string name="woman">Kobieta</string>
    <string name="birthday_format">DD.MM.RRRR</string>
    <string name="register_user">Rejestracja użytkownika</string>
    <string name="something_went_wrong">Coś poszło nie tak</string>
    <string name="body_weight">Waga</string>
    <string name="accept_rules">Akceptuję regulamin</string>
    <string name="must_accept_rules">Należy zaakceptować regulamin</string>
</resources>